--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,6 +2,7 @@
 @import 'fonts'
 @import 'elements'
 @import 'header'
+@import 'slick'
 @import 'footer'
 
 .main
@@ -86,3 +87,77 @@
         align-items: center
         justify-content: center
         letter-spacing: -5px
+
+.burger
+    padding-top: 100px
+    .wrap
+        align-items: flex-start
+        margin-bottom: 130px
+
+    h2
+        font-weight: normal
+        width: 44%
+
+    p
+        width: 54%
+        line-height: 120%
+        font-size: 44px
+        letter-spacing: -1px
+
+    &__bg
+        width: 100%
+        display: block
+        aspect-ratio: 16/9
+        object-fit: cover
+
+.slider
+    margin-top: 250px
+
+    .container
+        padding: 130px
+
+    &-item
+        min-height: 100vh
+        position: relative
+        z-index: 1
+        display: flex !important
+        flex-direction: column
+        justify-content: flex-end
+        p
+            color: #8d8888
+            max-width: 39%
+            letter-spacing: -1px
+            font-size: 40px
+            line-height: 110%
+            text-shadow: 0 0 2px rgba(0, 0, 0, 1)
+            &:nth-child(2)
+                max-width: 57%
+
+        &.last
+            justify-content: center
+            .container
+                align-items: flex-end
+            p
+                font-size: 34px
+                max-width: 47%
+                width: 517px
+                color: white
+                text-shadow: 0 0 2px rgba(0, 0, 0, 1)
+                &:nth-child(2)
+                    max-width: unset
+                    width: unset
+
+    .wrap
+        position: relative
+        z-index: 11
+
+    img
+        object-fit: cover
+        display: block
+        aspect-ratio: 16/9
+        width: 100%
+        height: 100%
+        position: absolute
+        left: 0
+        top: 0
+        z-index: 1
