--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -7,11 +7,15 @@
         font-size: 25px
         margin: 0 auto 
         color: white
-    img
+
+    &__logo
         max-width: 168px
         display: block
         filter: invert(1)
         position: absolute
         top: 50%
         left: 50%
-        transform: translate(-50%, -50%)
+        transform: translate(-50%, -50%) !important
+        
+    img
+        display: block
