--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -5,8 +5,9 @@
     width: 100%
     z-index: 9999
     transition: all ease .3s
+    opacity: 0
     &.fixed
-        // background-color: rgba(#efefef, .3)
+        opacity: 1
         backdrop-filter: blur(11px)
         .container
             padding: 20px 60px
